<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studios.darkzen.dictionaryapp.ui.DictionarySearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/responsepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/SearchBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_rect"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/searchbar_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="@color/searchtxtcolor" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:contentDescription="@string/search_button"
                android:src="@drawable/ic_search" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/hello_word"
            android:textColor="@color/boldword"
            android:textSize="38sp"
            app:layout_constraintStart_toStartOf="@id/SearchBar"
            app:layout_constraintTop_toBottomOf="@id/SearchBar" />

        <TextView
            android:id="@+id/tvPhonetics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/hello_phonetic"
            android:textColor="@color/fuchsia_blue"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@id/tvWord"
            app:layout_constraintTop_toBottomOf="@id/tvWord" />

        <ImageButton
            android:id="@+id/btnAudioplay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="130dp"
            android:background="@drawable/circleshape"
            android:contentDescription="@string/audio_play_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_playbtn"
            app:layout_constraintBottom_toBottomOf="@id/tvPhonetics"
            app:layout_constraintEnd_toEndOf="@id/SearchBar"
            app:layout_constraintTop_toTopOf="@id/tvWord" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/tvPhonetics" />

        <View
            android:id="@+id/Sline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/xanadu_black"
            app:layout_constraintTop_toBottomOf="@id/rvMeaning" />

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/txt_source"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Sline" />

        <TextView
            android:id="@+id/tvSlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="start"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tvSource" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
